# metric_learning

./: .gitignore  LICENSE  README.md  config.yaml  convert_qqp.py  pyproject.toml  requirements.txt  train.py
model/: config.py  dataset.py  eval.py  main.py  models.py  q_routing.py  testing.py  utils.py
old_classifier_model/: metric_angular_lightning.py
