[build-system]
requires = ["setuptools>=69.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "metric_learning"
version = "0.1.1"
authors = [
    {name = "Brian Hsu", email = "bhsu@anl.gov"},
    {name = "Kyle Hippe", email = "khippe@anl.gov"},
    {name = "Alexander Brace", email = "abrace@anl.gov"},
    {name = "Ozan Gokdemir", email = "ogokdemir@anl.gov"},
    {name = "Carlo Siebenschuh", email = "siebenschuh@uchicago.edu"}
]
description = "Models for metric learning on scientific document embeddings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "torch==2.1.2",
    "lightning==2.2.0.post0", 
    "pytorch-metric-learning==2.4.1", 
    "umap-learn==0.5.5", 
    "torchmetrics==1.3.1", 
    "pyarrow==15.0.0", 
    "pandas==2.2.1", 
    "numpy==1.26.4", 
    "matplotlib==3.8.3", 
    "wandb==0.16.3", 
    "faiss-cpu==1.7.4", 
    "faiss-gpu==1.7.2", 
    "lightning[pytorch-extra]", 
    "pydantic==2.6.3", 
    "pydantic-settings==2.2.1", 
    "transformers==4.38.2"
]

[[tool.mytool.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
secondary = true

[project.urls]
homepage = "https://github.com/ramanathanlab/metric_learning"
repository = "https://github.com/ramanathanlab/metric_learning"

[tool.codespell]
skip = """
.git,
.github,
__pycache__,
build,
dist,
.*egg-info
"""





